Initial support for Java 24
+ This temporarily removes JaCoCo until 0.8.13 is out
+ This uses Open JDK for 24 in GitHub Actions until Temurin is out