@@ -5,7 +5,7 @@ import java.net.URI
 
 plugins {
     id("com.adarshr.test-logger") version "4.0.0"
-    id("jacoco")
+    // TODO When JaCoCo Upgrades: id("jacoco")
     id("java-library")
     id("maven-publish")
     id("net.ltgt.errorprone") version "4.1.0"
@@ -16,15 +16,13 @@ description = "An extra set of helpful Stream Gatherers for Java"
 group = "com.ginsberg"
 version = file("VERSION.txt").readLines().first()
 
-@Suppress("PropertyName")
-val ENABLE_PREVIEW = "--enable-preview"
 val gitBranch = gitBranch()
 val gatherers4jVersion = if(gitBranch == "main" || gitBranch.startsWith("release/")) version.toString()
                          else "${gitBranch.substringAfterLast("/")}-SNAPSHOT"
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(23)
+        languageVersion = JavaLanguageVersion.of(24)
     }
     withJavadocJar()
     withSourcesJar()
@@ -113,7 +111,6 @@ signing {
 
 tasks {
     withType<JavaCompile> {
-        options.compilerArgs.add(ENABLE_PREVIEW)
         options.errorprone {
             check("NullAway", CheckSeverity.ERROR)
             option("NullAway:AnnotatedPackages", "com.ginsberg.gatherers4j")
@@ -124,13 +121,18 @@ tasks {
             }
         }
     }
-
+    /*
+    TODO When JaCoCo Upgrades, restore this
+    jacoco {
+       toolVersion = "0.8.13 "
+    }
     jacocoTestReport {
         dependsOn(test)
         reports {
             xml.required = true
         }
     }
+    */
     jar {
         manifest {
             attributes(
@@ -153,8 +155,7 @@ tasks {
         }
     }
     test {
-        finalizedBy(jacocoTestReport)
-        jvmArgs(ENABLE_PREVIEW)
+        // TODO When JaCoCo Upgrades: finalizedBy(jacocoTestReport)
         useJUnitPlatform()
     }
 
